syntax = "proto3";

package parking;

service ParkingSpaceService {
  rpc GetParkingSpaceList (ParkingSpaceListRequest) returns (ParkingSpaceListResponse);
  rpc ReserveParking (ReserveParkingRequest) returns (ReserveParkingResponse);
  rpc CancelParkingReservation (CancelParkingReservationRequest) returns (CancelParkingReservationResponse);
}

message ParkingSpaceListRequest {
  int32 parking_space_id = 1;
}

message ParkingSpaceListResponse {
  int32 parking_space_id = 1;
  string parking_space_type = 2;
  string building_name = 3;
  string address = 4;
  float price = 5;
  bool is_available = 6;
}

message ReserveParkingRequest {
  int32 parking_space_id = 1;
  int32 user_id = 2;
  int32 vehicle_id = 3;
  string status = 4;
  string duration = 5;
}

message ReserveParkingResponse {
  
}

message CancelParkingReservationRequest {
  int32 parking_space_id = 1;
  int32 user_id = 2;
}

message CancelParkingReservationResponse {
  
}
